# cuda_exploration

./: CMakeLists.txt  README.md
cuda0/: CMakeLists.txt
cuda0/include/: cuda_fd_funcs.h
cuda0/kernels/: main.cu  math_operations.cu  matrixMul.cu  print_kernel.cu
cuda0/src/: main.cpp
cuda1/: CMakeLists.txt
cuda1/include/: CudaArray.h  cuda_fd_funcs.h
cuda1/kernels/: imageProcessing.cu
cuda1/src/: main.cpp
